# xiaoapi

./: README.md  main.py  pyproject.toml  requirements.txt
application/: routes.py  settings.py  urls.py
application/configs/: __init__.py  database_config.py  uvicorn_config.py
apps/quickstart/: crud.py  routes.py  test.py  urls.py
apps/quickstart/models/: department.py  employee.py
apps/quickstart/params/: __init__.py  department.py  employee.py
apps/quickstart/schemas/: __init__.py  department.py  employee.py
core/: docs.py  event.py  exception.py  logger.py  middleware.py  mounting.py  response.py  utils.py
db/: crud.py  database.py  dependencies.py  migrate.py
extensions/mongodb/: mongodb.py
extensions/redis/: redis.py
fastapi_xiaojinli/: __init__.py  admin.py
fastapi_xiaojinli/conf/: __init__.py  global_settings.py
fastapi_xiaojinli/conf/module_template/: crud.py  dependencies.py  models.py  routes.py
fastapi_xiaojinli/conf/project_template/: manage.py
fastapi_xiaojinli/conf/project_template/application/: routes.py  settings.py
fastapi_xiaojinli/core/: __init__.py  docs.py  event.py  fastapi.py  logger.py  mounting.py  utils.py
fastapi_xiaojinli/db/: __init__.py  database.py  migrate.py
fastapi_xiaojinli/extensions/elasticsearch/: elasticsearch.py
fastapi_xiaojinli/extensions/mongodb/: __init__.py  mongo_manage.py  mongodb.py
fastapi_xiaojinli/extensions/redis/: redis.py
fastapi_xiaojinli/management/: __init__.py
fastapi_xiaojinli/management/commands/: __init__.py  createmodule.py  createproject.py  migrate.py  runserver.py
fastapi_xiaojinli/middleware/: request_log_middleware.py
libs/elasticsearch/: README.md  pyproject.toml  requirements.txt
libs/elasticsearch/xiaoapi_elasticsearch/: __init__.py  elasticsearch.py
libs/mongodb/: README.md  pyproject.toml  requirements.txt
libs/mongodb/xiaoapi_mongodb/: __init__.py  mongo_manage.py  mongodb.py
libs/redis/: README.md  pyproject.toml  requirements.txt
libs/redis/xiaoapi_redis/: __init__.py  redis.py
libs/sqlalchemy/: LICENSE  README.md  pyproject.toml  requirements.txt
libs/sqlalchemy/xiaoapi_sqlalchemy/: __init__.py  commands.py  crud.py  database.py  migrate.py
modules/quickstart/: dependencies.py  models.py  routes.py  schemas.py  test.py
utils/: response.py
xiaoapi/: admin.py
xiaoapi/conf/: __init__.py  global_settings.py
xiaoapi/conf/module_template/: crud.py  dependencies.py  models.py  routes.py  schemas.py
xiaoapi/conf/project_template/: manage.py
xiaoapi/core/: __init__.py  exception.py  fastapi.py  logger.py  middleware.py  router.py
xiaoapi/db/: crud.py  database.py  dependencies.py  migrate.py  model_base.py
xiaoapi/extensions/elasticsearch/: __init__.py  elasticsearch.py
xiaoapi/extensions/redis/: __init__.py
xiaoapi/management/: __init__.py
xiaoapi/management/commands/: createmodule.py  migrate.py
xiaoapi/middleware/: __init__.py  request_log_middleware.py
xiaoapi/response/: __init__.py  response.py  status.py
