[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoapi"
authors = [
    {name = "xiaojinli", email = "553555614@qq.com"},
]
description = "A fastapi framework for web development"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["fastapi", "web-framework"]
license = {text = "MIT"}
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.25.0",
    "typer[all]==0.10.0",
    "loguru==0.7.2",
    "orjson==3.9.15",
    "SQLAlchemy==2.0.25",
    "aiosqlite==0.20.0",
    "asyncmy==0.2.9",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/xiaojinlii/fastapi/blob/main/README.md"
Source = "https://github.com/xiaojinlii/fastapi"

[tool.setuptools]
packages = ["xiaoapi"]

[tool.setuptools.dynamic]
version = {attr = "xiaoapi.__version__"}