[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoapi-elasticsearch"
authors = [
    {name = "xiaojinli", email = "553555614@qq.com"},
]
description = "xiaoapi elasticsearch"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["xiaoapi", "fastapi", "web-framework", "elasticsearch"]
license = {text = "MIT"}
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xiaoapi",
    "elasticsearch[async]==8.11.0",
]
dynamic = ["version"]

[project.urls]
"Documentation" = "https://github.com/xiaojinlii/xiaoapi/blob/main/libs/elasticsearch/README.md"
"Repository" = "https://github.com/xiaojinlii/xiaoapi"
"Source Code" = "https://github.com/xiaojinlii/xiaoapi/tree/main/libs/elasticsearch"

[tool.setuptools]
packages = ["xiaoapi_elasticsearch"]

[tool.setuptools.dynamic]
version = {attr = "xiaoapi_elasticsearch.__version__"}