[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoapi-mongodb"
authors = [
    {name = "xiaojinli", email = "553555614@qq.com"},
]
description = "xiaoapi mongodb"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["xiaoapi", "fastapi", "web-framework", "mongodb"]
license = {text = "MIT"}
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xiaoapi==0.0.1",
    "motor==3.3.2",
]
dynamic = ["version"]

[project.urls]
"Documentation" = "https://github.com/xiaojinlii/xiaoapi/blob/main/libs/mongodb/README.md"
"Repository" = "https://github.com/xiaojinlii/xiaoapi"
"Source Code" = "https://github.com/xiaojinlii/xiaoapi/tree/main/libs/mongodb"

[tool.setuptools]
packages = ["xiaoapi_mongodb"]

[tool.setuptools.dynamic]
version = {attr = "xiaoapi_mongodb.__version__"}